tcg-salesforce/force-app/main/default/objects/Match__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attack</fullName>
            </value>
            <value>
                <fullName>Draw card</fullName>
            </value>
            <value>
                <fullName>End turn</fullName>
            </value>
            <value>
                <fullName>Set card</fullName>
            </value>
            <value>
                <fullName>Put card on field</fullName>
            </value>
            <value>
                <fullName>Monster destroyed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>