tcg-salesforce/force-app/main/default/objects/Match__c/fields/GeneratePlayersHands__c.field-meta.xml
<CustomField>
    <fullName>GeneratePlayersHands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Players Hands</label>
    <type>Checkbox</type>
</CustomField>