tcg-salesforce/force-app/main/default/objects/Match__c/fields/GeneratePlayersTwoHands__c.field-meta.xml
<CustomField>
    <fullName>GeneratePlayersTwoHands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Players Two Hands</label>
    <type>Checkbox</type>
</CustomField>