tcg-salesforce/force-app/main/default/objects/Match__c/fields/LastMatchEvent__c.field-meta.xml
<CustomField>
    <fullName>LastMatchEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Match event</label>
    <referenceTo>MatchEvent__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>