tcg-salesforce/force-app/main/default/objects/Match__c/fields/LastPlayerAction__c.field-meta.xml
<CustomField>
    <fullName>LastPlayerAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last player action</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matches (Last player action)</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>