tcg-salesforce/force-app/main/default/objects/Match__c/fields/LifePointsPlayerOne__c.field-meta.xml
<CustomField>
    <fullName>LifePointsPlayerOne__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Life points player one</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>