tcg-salesforce/force-app/main/default/objects/Match__c/fields/LifePointsPlayerTwo__c.field-meta.xml
<CustomField>
    <fullName>LifePointsPlayerTwo__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Life points player two</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>