tcg-salesforce/force-app/main/default/objects/Match__c/fields/MatchEvents__c.field-meta.xml
<CustomField>
    <fullName>MatchEvents__c</fullName>
    <label>Match events</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>