tcg-salesforce/force-app/main/default/objects/Match__c/fields/PalyerOne__c.field-meta.xml
<CustomField>
    <fullName>PalyerOne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player one</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matches (Player One)</relationshipLabel>
    <relationshipName>MatchesPlayerOne</relationshipName>
    <type>Lookup</type>
</CustomField>