tcg-salesforce/force-app/main/default/objects/Match__c/fields/PlayerTwo__c.field-meta.xml
<CustomField>
    <fullName>PlayerTwo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player two</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matches (Player two)</relationshipLabel>
    <relationshipName>MatchesPlayerTwo</relationshipName>
    <type>Lookup</type>
</CustomField>