tcg-salesforce/force-app/main/default/objects/Match__c/fields/StartingMatchPlayer__c.field-meta.xml
<CustomField>
    <fullName>StartingMatchPlayer__c</fullName>
    <label>Starting match player</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Player One</fullName>
            </value>
            <value>
                <fullName>Player Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>