tcg-salesforce/force-app/main/default/objects/Match__c/fields/UpdateMatch__c.field-meta.xml
<CustomField>
    <fullName>UpdateMatch__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Update match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>