tcg-salesforce/force-app/main/default/objects/Match__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matches (Winner)</relationshipLabel>
    <relationshipName>MatchesWinner</relationshipName>
    <type>Lookup</type>
</CustomField>